--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,13 @@ jobs:
 
       - name: Find and Run deploy.sh for LabAspApi folders
         run: |
-          $baseDir = 'C:\actions-runner\_work\LabAspApi\LabAspApi'
+          $baseDir = "$PSScriptRoot\\LabAspApi"
           Get-ChildItem -Path $baseDir -Directory -Filter 'LabAspApi_*' | ForEach-Object {
-            $deployScript = "$($_.FullName)\deploy.sh"
+            $deployScript = "$($_.FullName)\\deploy.sh"
             if (Test-Path $deployScript) {
               Write-Output "Running deploy script in $($_.FullName)"
               Push-Location $_.FullName
-              & "C:\Program Files\Git\bin\bash.exe" $deployScript
+              & "C:\\Program Files\\Git\\bin\\bash.exe" $deployScript
               $exitCode = $LASTEXITCODE
               Pop-Location
               if ($exitCode -ne 0) {
