Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
     limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
     limit_req zone=one burst=20 nodelay;
 
-upstream labaspapi{server labaspapi_blue:5000;}
+upstream labaspapi{server labaspapi_green:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_blue:5000;}
 upstream labaspapi_bbbb{server labaspapi_bbbb_blue:5000;}
 upstream labaspapi_cccc{server labaspapi_cccc_blue:5000;}
